--- a/src/views/blocks/banner.html
+++ b/src/views/blocks/banner.html
@@ -2,10 +2,10 @@
     <div class="banner__background">
         <img src="../../assets/images/banner.jpg" alt="">
     </div>
-    <h1 class="banner__title">
-        <span>Канатная дорога через р. Оку</span>
-        <span>Строительство идет!</span>
-    </h1>
+    <div class="banner__headline">
+        <h1 class="banner__title"> Канатная дорога через р. Оку </h1>
+        <span class="banner__subtitle">Строительство идет!</span>
+    </div>
     <div class="banner__slider">
         <div class="banner__slider-title">
             <span>Основные этапы </span>
