--- a/src/styles/blocks/banner.scss
+++ b/src/styles/blocks/banner.scss
@@ -22,6 +22,10 @@
     height: 100%;
 
     @include media(576.98, "max") {
+      height: 350px;
+    }
+
+    @include media(400.98, "max") {
       height: 235px;
     }
 
@@ -39,19 +43,57 @@
       width: 100%;
       height: 100%;
       background: linear-gradient(
-        160.39deg,
-        rgba(0, 0, 0, 0) 20.42%,
-        #000000 82.47%
+        207.09deg,
+        rgba(0, 0, 0, 0) 20.79%,
+        rgba(0, 0, 0, 0.7) 94.2%
       );
+
       pointer-events: none;
 
       @include media(576.98, "max") {
         background: linear-gradient(
-          134.83deg,
-          rgba(0, 0, 0, 0) 44.31%,
-          #000000 89.12%
+          207.09deg,
+          rgba(0, 0, 0, 0) 20.79%,
+          rgba(0, 0, 0, 0.7) 94.2%
         );
       }
+    }
+  }
+
+  // .banner__headline
+  &__headline {
+    max-width: 1810px;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 64px;
+    position: relative;
+    z-index: 1;
+
+    @include media(1900.98, "max") {
+      max-width: 100%;
+      padding: 0 55px;
+    }
+
+    @include media(1280.98, "max") {
+    }
+
+    @include media(992.98, "max") {
+      padding: 0 25px;
+    }
+
+    @include media(576.98, "max") {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: flex-end;
+      padding: 0 12px;
+      padding-bottom: 20px;
+      margin-bottom: 0;
+      height: 350px;
+    }
+
+    @include media(400.98, "max") {
+      height: 235px;
     }
   }
 
@@ -60,46 +102,47 @@
     @include graphik-bold;
     font-size: 68px;
     line-height: 100%;
-    letter-spacing: 0%;
-    text-align: right;
+    text-align: left;
     color: $white;
-    max-width: 1810px;
-    width: 100%;
-    margin-bottom: 36px;
-    position: relative;
-    z-index: 1;
+    margin-bottom: 8px;
 
-    span {
-      display: block;
-      &:first-child {
-        margin-bottom: 18px;
-        @include media(576.98, "max") {
-          margin-bottom: 0;
-        }
-      }
-    }
-
-    @include media(1900.98, "max") {
-      max-width: 100%;
-      padding: 0 55px;
-    }
-
-    @include media(992.98, "max") {
-      padding: 0 25px;
+    @include media(1280.98, "max") {
       font-size: 42px;
     }
 
+    @include media(768.98, "max") {
+      font-size: 34px;
+    }
+
     @include media(576.98, "max") {
-      padding: 0 12px;
+      text-align: right;
       font-size: 32px;
-      margin-bottom: 0;
-      height: 235px;
-      display: flex;
-      align-items: flex-end;
-      justify-content: flex-end;
-      flex-direction: column;
-      gap: 6px;
-      padding-bottom: 15px;
+      margin-bottom: 10px;
+      max-width: 292px;
+      width: 100%;
+    }
+  }
+
+  // .banner__subtitle
+  &__subtitle {
+    display: block;
+    font-size: 42px;
+    line-height: 100%;
+    color: $white;
+    text-align: left;
+    width: 100%;
+
+    @include media(1280.98, "max") {
+      font-size: 32px;
+    }
+
+    @include media(768.98, "max") {
+      font-size: 26px;
+    }
+
+    @include media(576.98, "max") {
+      text-align: right;
+      font-size: 24px;
     }
   }
 
