--- a/src/styles/blocks/faq.scss
+++ b/src/styles/blocks/faq.scss
@@ -21,7 +21,7 @@
 
     @include media(992.98, "max") {
       font-size: 32px;
-      margin-bottom: 24px;
+      margin-bottom: 21px;
     }
 
     @include media(576.98, "max") {
@@ -65,8 +65,9 @@
     cursor: pointer;
 
     @include media(992.98, "max") {
-      padding: 0 10px 0 20px;
-      height: 100px;
+      padding: 21px 15px;
+      height: 100%;
+      gap: 15px;
     }
   }
 
@@ -83,13 +84,13 @@
     }
 
     @include media(576.98, "max") {
-      font-size: 16px;
-      max-width: 400px;
+      font-size: 18px;
+      line-height: 130%;
       width: 100%;
     }
 
     @include media(400.98, "max") {
-      max-width: 230px;
+      max-width: 270px;
     }
   }
 
@@ -104,13 +105,8 @@
     justify-content: center;
 
     @include media(992.98, "max") {
-      width: 50px;
-      height: 50px;
-    }
-
-    @include media(576.98, "max") {
-      width: 40px;
-      height: 40px;
+      width: 35px;
+      height: 35px;
     }
 
     &::after {
@@ -126,6 +122,10 @@
       opacity: 0;
       transition: opacity 0.5s ease-in-out;
       z-index: 0;
+
+      @include media(992.98, "max") {
+        display: none;
+      }
     }
 
     svg {
@@ -141,16 +141,6 @@
         transition: all 0.3s ease-in-out;
         stroke: #3148d1;
       }
-
-      @include media(992.98, "max") {
-        width: 25px;
-        height: 25px;
-      }
-
-      @include media(576.98, "max") {
-        width: 20px;
-        height: 20px;
-      }
     }
 
     .active & {
@@ -158,6 +148,9 @@
         transform: translate(-50%, -50%) rotate(45deg);
         path {
           stroke: $white;
+          @include media(992.98, "max") {
+            stroke: #3148d1;
+          }
         }
       }
       &::after {
@@ -179,18 +172,23 @@
 
     @include media(992.98, "max") {
       padding: 0 50px 0 20px;
-      gap: 40px;
+      gap: 50px;
     }
 
     @include media(576.98, "max") {
-      padding: 0 20px 0 20px;
-      gap: 20px;
+      padding: 0 15px 0 15px;
+      gap: 48px;
+      margin-top: 0;
     }
 
     .active & {
-      max-height: 500px;
+      max-height: 800px;
       padding-bottom: 40px;
       visibility: visible;
+
+      @include media(576.98, "max") {
+        padding-bottom: 28px;
+      }
     }
   }
 
@@ -200,12 +198,17 @@
     line-height: 40px;
 
     @include media(992.98, "max") {
-      font-size: 18px;
-      line-height: 150%;
+      font-size: 20px;
+      line-height: 32px;
+
+      br {
+        display: none;
+      }
     }
 
     @include media(576.98, "max") {
-      font-size: 14px;
+      font-size: 18px;
+      line-height: 28px;
     }
   }
 }
