--- a/src/styles/blocks/feedback.scss
+++ b/src/styles/blocks/feedback.scss
@@ -8,7 +8,7 @@
   padding: 60px 0;
 
   @include media(992.98, "max") {
-    padding: 40px 0;
+    padding: 0 0 40px;
   }
 
   // .feedback__wrapper
@@ -24,6 +24,10 @@
     @include media(992.98, "max") {
       padding: 40px 20px;
       border-radius: 20px;
+    }
+
+    @include media(576.98, "max") {
+      padding: 24px 19px;
     }
   }
 
@@ -48,7 +52,7 @@
 
     @include media(992.98, "max") {
       font-size: 32px;
-      margin-bottom: 24px;
+      margin-bottom: 28px;
     }
 
     @include media(576.98, "max") {
@@ -66,16 +70,12 @@
 
     @include media(992.98, "max") {
       font-size: 18px;
-      line-height: 150%;
-      margin-bottom: 20px;
+      line-height: 28px;
+      margin-bottom: 21px;
 
       br {
         display: none;
       }
-    }
-
-    @include media(576.98, "max") {
-      font-size: 16px;
     }
   }
 
@@ -93,9 +93,11 @@
   &__field {
     width: 100%;
     margin-bottom: 20px;
+    display: block;
+    position: relative;
 
     @include media(992.98, "max") {
-      margin-bottom: 10px;
+      margin-bottom: 12px;
     }
   }
 
@@ -109,7 +111,7 @@
     border-radius: 8px;
     padding: 30px 32px;
     align-items: center;
-    height: 100%;
+    border: 1px solid transparent;
 
     @include media(992.98, "max") {
       font-size: 20px;
@@ -117,7 +119,9 @@
 
     @include media(576.98, "max") {
       font-size: 18px;
-      padding: 20px;
+      padding: 11px 20px;
+      border-radius: 10px;
+      height: 50px;
     }
 
     &::placeholder {
@@ -140,6 +144,10 @@
       -webkit-transition: background-color 5000s ease-in-out 0s;
       transition: background-color 5000s ease-in-out 0s;
     }
+
+    &--error {
+      border: 1px solid #ff0000;
+    }
   }
 
   // .feedback__field--textarea
@@ -161,7 +169,7 @@
     }
 
     @include media(992.98, "max") {
-      height: 170px;
+      height: 155px;
     }
   }
 
@@ -180,7 +188,8 @@
     }
 
     @include media(576.98, "max") {
-      height: 50px;
+      height: 53px;
+      width: 100%;
     }
   }
 
@@ -190,6 +199,7 @@
   }
 
   &__label--file {
+    @include graphik-medium;
     padding: 10px 32px;
     background: #3148d1;
     color: $white;
@@ -211,8 +221,14 @@
     }
 
     @include media(576.98, "max") {
-      padding: 10px 20px;
+      border-radius: 10px;
+      padding: 19px 20px;
       font-size: 18px;
+      background: transparent;
+      border: 0.34px solid rgba(49, 72, 209, 1);
+      color: $title-color;
+      width: 100%;
+      margin-top: -5px;
     }
 
     // .file-info
@@ -227,6 +243,7 @@
 
       @include media(576.98, "max") {
         font-size: 18px;
+        color: $title-color;
       }
     }
 
@@ -235,11 +252,17 @@
       width: 18px;
       height: 14px;
       order: -1;
+      @include media(576.98, "max") {
+        path {
+          fill: $title-color;
+        }
+      }
     }
   }
 
   // .feedback__button
   &__button {
+    @include graphik-medium;
     width: 100%;
     height: 100px;
     display: flex;
@@ -260,15 +283,51 @@
     }
 
     @include media(576.98, "max") {
-      font-size: 20px;
-      margin-top: 60px;
+      font-size: 18px;
+      margin-top: 16px;
+      border-radius: 10px;
+      padding: 19px 20px;
+      height: 53px;
     }
   }
 
   // .error-message
   .error-message {
-    color: red;
-    font-size: 14px;
-    margin-top: 5px;
+    color: #ff0000;
+    font-size: 20px;
+    line-height: 40px;
+    background: $white;
+    padding: 6px 32px;
+    position: absolute;
+    bottom: -35px;
+    left: 20px;
+    z-index: 1;
+    box-shadow: 0px 10px 36px 0px rgba(0, 0, 0, 0.16);
+
+    @include media(576.98, "max") {
+      padding: 11px 15px;
+      font-size: 14px;
+      line-height: 28px;
+      bottom: -53px;
+      left: 0;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: -10px;
+      left: 24px;
+      width: 14px;
+      height: 16px;
+      background: url("../assets/images/icons/arrow-error.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      z-index: 2;
+    }
+
+    @include media(576.98, "max") {
+      font-size: 14px;
+    }
   }
 }
