--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,7 +1,9 @@
 @use "../blocks/banner";
 @use "../blocks/about-project";
+@use "../blocks/map";
 @use "../blocks/cableway-info";
+@use "../blocks/main-events";
 @use "../blocks/gallery";
-@use "../blocks/news";
+@use "../blocks/news-block";
 @use "../blocks/faq";
 @use "../blocks/feedback";
