--- a/src/views/blocks/cableway-info.html
+++ b/src/views/blocks/cableway-info.html
@@ -6,27 +6,15 @@
                 <div class="swiper-slide cableway-info__swiper-slide">
                     <div class="cableway-info__card">
                         <div class="cableway-info__card-headline">
-                            <div class="cableway-info__card-value">3340</div>
-                            <div class="cableway-info__card-label">метров</div>
-                        </div>
-                        <div class="cableway-info__card-content">
-                            <p class="cableway-info__card-text">протяженность трассы с панорамными <br/> видами на оба берега
-                                Оки. Канатная дорога <br/> пройдет над самыми живописными <br/> участками городского ландшафта и
-                                помимо <br/> удобного способа передвижения даст <br/> возможность наслаждаться прекрасными <br/> пейзажами
-                                вместо дорожных заторов <br/> и темноты метротоннелей.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide cableway-info__swiper-slide">
-                    <div class="cableway-info__card">
-                        <div class="cableway-info__card-headline">
                             <div class="cableway-info__card-value">30</div>
                             <div class="cableway-info__card-label">минут</div>
                         </div>
                         <div class="cableway-info__card-content">
-                            <p class="cableway-info__card-text">Столько составит экономия времени пути <br/> для пассажиров
-                                канатной дороги <br/> по сравнению с другими видами транспорта. <br/> Это на полчаса меньше стресса за рулем, <br/> меньше шума и неудобств в общественном <br/> транспорте в час пик. Время в пути от <br/> проспекта Гагарина
-                                до Заречного бульвара – <br/> всего 15 минут.
+                            <p class="cableway-info__card-text">экономия времени пути для пассажиров <br />
+                                канатной дороги <br /> по сравнению с другими видами транспорта. <br /> Это на полчаса
+                                меньше стресса за рулем, <br /> меньше шума и неудобств в общественном <br /> транспорте
+                                в час пик. Время в пути <br /> от проспекта Гагарина до Заречного <br /> бульвара –
+                                всего 15 минут.
                             </p>
                         </div>
                     </div>
@@ -38,12 +26,32 @@
                             <div class="cableway-info__card-label">станции</div>
                         </div>
                         <div class="cableway-info__card-content">
-                            <p class="cableway-info__card-text">канатной дороги получили названия: <br/> «Проспект Гагарина»,
-                                «Тихая гавань», <br/> «Заречный бульвар». Ежедневно канатная <br/> дорога сможет пропускать 10 000 <br/>
-                                пассажиров, а это значит, что ровно <br/> на столько же снизится ежедневное <br/> давление
-                                на перегруженные транспортные <br/> артерии и общественный транспорт.
+                            <p class="cableway-info__card-text">канатной дороги получили названия: <br /> «Проспект
+                                Гагарина»,
+                                «Тихая гавань», <br /> «Заречный бульвар». Ежедневно канатная <br /> дорога сможет
+                                пропускать 10 000 <br />
+                                пассажиров, а это значит, что ровно <br /> на столько же снизится ежедневное <br />
+                                давление
+                                на перегруженные транспортные <br /> артерии и общественный транспорт.
 
                             </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide cableway-info__swiper-slide">
+                    <div class="cableway-info__card">
+                        <div class="cableway-info__card-headline">
+                            <div class="cableway-info__card-value">3340</div>
+                            <div class="cableway-info__card-label">метров</div>
+                        </div>
+                        <div class="cableway-info__card-content">
+                            <p class="cableway-info__card-text">протяженность трассы с панорамными <br /> видами на оба
+                                берега
+                                Оки. Канатная дорога <br /> пройдет над самыми живописными <br /> участками городского
+                                ландшафта и
+                                помимо <br /> удобного способа передвижения даст <br /> возможность наслаждаться
+                                прекрасными <br /> пейзажами
+                                вместо дорожных заторов <br /> и темноты метротоннелей.</p>
                         </div>
                     </div>
                 </div>
