--- a/src/views/blocks/feedback.html
+++ b/src/views/blocks/feedback.html
@@ -24,6 +24,10 @@
                     <label for="file" class="feedback__label feedback__label--file">Загрузить файл</label>
                 </div>
                 <button type="submit" class="feedback__button">Отправить</button>
+                <div class="feedback__privacy">
+                    Нажимая на кнопку «Отправить», вы соглашаетесь
+                    с политикой конфиденциальности
+                </div>
             </form>
         </div>
     </div>
