--- a/src/views/blocks/news-block.html
+++ b/src/views/blocks/news-block.html
@@ -2,7 +2,7 @@
     <div class="news__container container">
         <header class="news__header">
             <h2 class="news__title" id="news-title">Новости</h2>
-            <a href="#" class="news__button">
+            <a href="news.html" class="news__button">
                 <span class="news__button-text">Смотреть все</span>
                 <div class="news__button-icon">
                     <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -14,7 +14,7 @@
         </header>
         <div class="news__list">
             <article class="news__item">
-                <a href="#" class="news__link">
+                <a href="news-detail.html" class="news__link">
                     <figure class="news__image">
                         <img src="../../assets/images/news-1.jpg" alt="">
                     </figure>
@@ -31,7 +31,7 @@
                 </a>
             </article>
             <article class="news__item">
-                <a href="#" class="news__link">
+                <a href="news-detail.html" class="news__link">
                     <figure class="news__image">
                         <img src="../../assets/images/news-2.jpg" alt="">
                     </figure>
@@ -51,7 +51,7 @@
                 </a>
             </article>
             <article class="news__item">
-                <a href="#" class="news__link">
+                <a href="news-detail.html" class="news__link">
                     <figure class="news__image">
                         <img src="../../assets/images/news-3.jpg" alt="">
                     </figure>
