--- a/src/views/pages/index.html
+++ b/src/views/pages/index.html
@@ -13,9 +13,11 @@
   <main>
     <include src="../blocks/banner.html"></include>
     <include src="../blocks/about-project.html"></include>
+    <include src="../blocks/map.html"></include>
     <include src="../blocks/cableway-info.html"></include>
+    <include src="../blocks/main-events.html"></include>
     <include src="../blocks/gallery.html"></include>
-    <include src="../blocks/news.html"></include>
+    <include src="../blocks/news-block.html"></include>
     <include src="../blocks/faq.html"></include>
     <include src="../blocks/feedback.html"></include>
   </main>
