--- a/src/styles/blocks/about-project.scss
+++ b/src/styles/blocks/about-project.scss
@@ -50,24 +50,19 @@
     }
   }
 
-  // .about-project__title
-  &__title {
-    @include graphik-medium;
-    font-size: 48px;
-    line-height: 100%;
-    color: $title-color;
+  // .about-project__headline
+  &__headline {
     padding-bottom: 28px;
     margin-bottom: 48px;
     position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
 
     @include media(992.98, "max") {
-      font-size: 32px;
-      padding-bottom: 24px;
+      padding-bottom: 15px;
       margin-bottom: 32px;
-    }
-
-    @include media(576.98, "max") {
-      font-size: 19px;
     }
 
     &::after {
@@ -78,6 +73,55 @@
       width: 100%;
       height: 1px;
       background: #c7c7c7;
+    }
+  }
+
+  // .about-project__logo
+  &__logo {
+    max-width: 423px;
+    height: auto;
+    width: 100%;
+
+    @include media(992.98, "max") {
+      width: auto;
+      max-width: initial;
+      height: 40px;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+
+    &-desktop {
+      display: block;
+      @include media(992.98, "max") {
+        display: none;
+      }
+    }
+
+    &-mobile {
+      display: none;
+      @include media(992.98, "max") {
+        display: block;
+      }
+    }
+  }
+
+  // .about-project__title
+  &__title {
+    @include graphik-medium;
+    font-size: 48px;
+    line-height: 100%;
+    color: $title-color;
+
+    @include media(992.98, "max") {
+      font-size: 32px;
+    }
+
+    @include media(576.98, "max") {
+      font-size: 19px;
     }
   }
 
@@ -97,6 +141,10 @@
   &__left {
     flex-basis: 40%;
     max-width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 50px;
 
     @include media(1440.98, "max") {
       flex-basis: 45%;
@@ -141,21 +189,20 @@
     font-size: 22px;
     line-height: 40px;
     letter-spacing: 0%;
+    margin-bottom: 66px;
 
     @include media(992.98, "max") {
       font-size: 20px;
       line-height: 28px;
+      margin-bottom: 24px;
     }
 
     @include media(576.98, "max") {
       font-size: 18px;
     }
 
-    &:first-child {
-      margin-bottom: 66px;
-      @include media(992.98, "max") {
-        margin-bottom: 24px;
-      }
+    &:last-child {
+      margin-bottom: 0;
     }
   }
 }
