--- a/src/styles/blocks/banner.scss
+++ b/src/styles/blocks/banner.scss
@@ -1,16 +1,19 @@
 @use "../utils/utils" as *;
 
 .banner {
-  width: 100%;
-  height: 100vh;
   overflow: hidden;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-
+  aspect-ratio: 1920 / 690;
+  width: 100%;
+  @include media(992.98, "max") {
+    aspect-ratio: 1920 / 800;
+  }
   @include media(576.98, "max") {
-    height: 100%;
+    aspect-ratio: initial;
+    height: 395px;
   }
 
   // .banner__background
@@ -21,41 +24,49 @@
     width: 100%;
     height: 100%;
 
-    @include media(576.98, "max") {
-      height: 350px;
-    }
-
-    @include media(400.98, "max") {
-      height: 235px;
-    }
-
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-position: top;
     }
 
     &::after {
       content: "";
       position: absolute;
-      top: 0;
+      bottom: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: 975px;
       background: linear-gradient(
-        207.09deg,
-        rgba(0, 0, 0, 0) 20.79%,
-        rgba(0, 0, 0, 0.7) 94.2%
+        176.95deg,
+        rgba(0, 0, 0, 0) 44.11%,
+        rgba(0, 0, 0, 0.84) 102.58%
       );
-
+      transform: matrix(-1, 0, 0, 1, 0, 0);
       pointer-events: none;
 
       @include media(576.98, "max") {
+        height: 100%;
         background: linear-gradient(
-          207.09deg,
-          rgba(0, 0, 0, 0) 20.79%,
-          rgba(0, 0, 0, 0.7) 94.2%
+          181.14deg,
+          rgba(0, 0, 0, 0) 15.29%,
+          #000000 88.47%
         );
+      }
+    }
+
+    &-desktop {
+      display: block;
+      @include media(576.98, "max") {
+        display: none;
+      }
+    }
+
+    &-mobile {
+      display: none;
+      @include media(576.98, "max") {
+        display: block;
       }
     }
   }
@@ -65,9 +76,9 @@
     max-width: 1810px;
     width: 100%;
     margin: 0 auto;
-    margin-bottom: 64px;
     position: relative;
     z-index: 1;
+    margin-bottom: 55px;
 
     @include media(1900.98, "max") {
       max-width: 100%;
@@ -75,6 +86,7 @@
     }
 
     @include media(1280.98, "max") {
+      margin-bottom: 30px;
     }
 
     @include media(992.98, "max") {
@@ -85,41 +97,68 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-      align-items: flex-end;
       padding: 0 12px;
-      padding-bottom: 20px;
+      padding-bottom: 36px;
       margin-bottom: 0;
-      height: 350px;
-    }
-
-    @include media(400.98, "max") {
-      height: 235px;
     }
   }
 
   // .banner__title
   &__title {
-    @include graphik-bold;
-    font-size: 68px;
-    line-height: 100%;
-    text-align: left;
-    color: $white;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 32px;
 
     @include media(1280.98, "max") {
-      font-size: 42px;
+      gap: 4px 0;
     }
 
     @include media(768.98, "max") {
-      font-size: 34px;
+      margin-bottom: 24px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
     }
 
     @include media(576.98, "max") {
-      text-align: right;
-      font-size: 32px;
-      margin-bottom: 10px;
-      max-width: 292px;
+    }
+  }
+
+  // banner__title-text
+  &__title-text {
+    @include graphik-bold;
+    font-size: 66px;
+    line-height: 100%;
+    text-align: left;
+    color: $white;
+    white-space: nowrap;
+    display: contents;
+
+    @include media(1600.98, "max") {
+      font-size: 52px;
       width: 100%;
+    }
+
+    @include media(1440.98, "max") {
+      font-size: 46px;
+    }
+
+    @include media(1280.98, "max") {
+      font-size: 32px;
+    }
+  }
+
+  // .banner__title-line
+  &__title-line {
+    width: 100%;
+    height: 6px;
+    background: $white;
+    border-radius: 10px;
+
+    @include media(768.98, "max") {
+      margin-left: -20px;
+      width: calc(100% + 20px);
     }
   }
 
@@ -131,382 +170,89 @@
     color: $white;
     text-align: left;
     width: 100%;
+    margin-bottom: 40px;
 
     @include media(1280.98, "max") {
-      font-size: 32px;
+      font-size: 24px;
+      margin-bottom: 30px;
+    }
+
+    @include media(576.98, "max") {
+      margin-bottom: 28px;
+    }
+  }
+
+  // .banner__link
+  &__link {
+    max-width: 440px;
+    width: 100%;
+    height: 80px;
+    padding: 24px 38px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 70px;
+    background: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0.44) 0%,
+      rgba(255, 255, 255, 0.36) 100%
+    );
+    backdrop-filter: blur(25px);
+    border-radius: 16px;
+    cursor: pointer;
+    scale: 1;
+    transition: all 0.3s ease-in-out;
+
+    @include media(1280.98, "max") {
+      height: 60px;
+      padding: 14px 30px;
+      max-width: 360px;
+      gap: 2rem;
     }
 
     @include media(768.98, "max") {
+      gap: 0;
+      max-width: 300px;
+    }
+
+    @include media(576.98, "max") {
+      max-width: 250px;
+      padding: 15px 30px;
+      height: 50px;
+    }
+
+    &:hover {
+      scale: 1.02;
+    }
+  }
+
+  // .banner__link-text
+  &__link-text {
+    @include graphik-medium;
+    font-size: 32px;
+    line-height: 100%;
+    color: #ffffff;
+
+    @include media(1280.98, "max") {
       font-size: 26px;
     }
-
-    @include media(576.98, "max") {
-      text-align: right;
-      font-size: 24px;
-    }
-  }
-
-  // .banner__slider
-  &__slider {
-    margin-bottom: 50px;
-
-    @include media(576.98, "max") {
-      margin-bottom: 0;
-      background: rgba(228, 239, 255, 0.4);
-      padding: 40px 0;
-    }
-  }
-
-  // .banner__slider-title
-  &__slider-title {
-    max-width: 1810px;
-    width: 100%;
-    margin: 0 auto;
-    margin-bottom: 28px;
-
-    @include media(1900.98, "max") {
-      max-width: 100%;
-      padding: 0 55px;
-    }
-
-    @include media(992.98, "max") {
-      padding: 0 25px;
-    }
-
-    @include media(576.98, "max") {
-      padding: 0 12px;
-      margin-bottom: 20px;
-    }
-
-    span {
-      display: flex;
-      width: max-content;
-      @include graphik-medium;
-      font-size: 32px;
-      line-height: 100%;
-      letter-spacing: 0%;
-      color: $white;
-      padding: 24px 87px 27px;
-      border-radius: 16px;
-      background: linear-gradient(
-        90deg,
-        rgba(255, 255, 255, 0.44) 0%,
-        rgba(255, 255, 255, 0.36) 100%
-      );
-      backdrop-filter: blur(25px);
-      -webkit-backdrop-filter: blur(25px);
-
-      @include media(992.98, "max") {
-        font-size: 26px;
-        padding: 20px 40px;
-      }
-
-      @include media(576.98, "max") {
-        font-size: 19px;
-        backdrop-filter: initial;
-        background: transparent;
-        padding: 0;
-        border-radius: 0;
-        color: $title-color;
-      }
-    }
-  }
-
-  // .banner__swiper
-  &__swiper {
-    height: auto;
-    overflow: visible;
-  }
-
-  // .banner__swiper-wrapper
-  &__swiper-wrapper {
-    height: 300px;
-    @include media(1600.98, "max") {
-      height: 250px;
-    }
-
-    @include media(576.98, "max") {
-      height: 175px;
-    }
-  }
-
-  // .banner__swiper-slide
-  &__swiper-slide {
-    &.swiper-slide-active {
-      .banner__slide-wrapper {
-        height: 100%;
-      }
-
-      .banner__slide-stage {
-        height: 100%;
-      }
-    }
-  }
-
-  // .banner__slide-wrapper
-  &__slide-wrapper {
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  // .banner__slide-stage
-  &__slide-stage {
-    display: flex;
-    justify-content: space-between;
-    background: $white;
-    border-radius: 28px;
-    overflow: hidden;
-    width: 100%;
-    height: 90%;
-    transition: height 0.3s;
-
-    @include media(576.98, "max") {
-      height: 100%;
-      border-radius: 16px;
-    }
-  }
-
-  // .banner__slide-stage-completed
-  &__slide-stage-completed {
-    .banner__slide-left {
-      background: #e4efff;
-    }
-  }
-
-  // .banner__slide-stage-ongoing
-  &__slide-stage-ongoing {
-    .banner__slide-subtitle-text {
-      color: #ff4141;
-    }
-  }
-
-  // .banner__slide-stage-await
-  &__slide-stage-await {
-    .banner__slide-subtitle-text {
-      color: #737373;
-    }
-  }
-
-  // .banner__slide-left
-  &__slide-left {
-    padding: 26px 20px;
-    width: 100%;
-    @include media(576.98, "max") {
-      padding: 14px 12px;
-    }
-  }
-
-  // .banner__slide-subtitle
-  &__slide-subtitle {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 15px;
-
-    @include media(576.98, "max") {
-      margin-bottom: 8px;
-      gap: 6px;
-    }
-
-    img {
-      width: 30px;
-      height: auto;
-      object-fit: cover;
-
-      @include media(992.98, "max") {
-        width: 22px;
-      }
-      @include media(576.98, "max") {
-        width: 16px;
-      }
-    }
-  }
-
-  // .banner__slide-subtitle-circle
-  &__slide-subtitle-circle {
-    width: 23px;
-    height: 23px;
-    background: #ff4141;
-    border-radius: 50%;
-
-    @include media(992.98, "max") {
-      width: 19px;
-      height: 19px;
-    }
-    @include media(576.98, "max") {
-      width: 13px;
-      height: 13px;
-    }
-  }
-
-  // .banner__slide-subtitle-text
-  &__slide-subtitle-text {
-    font-size: 21px;
-    line-height: 100%;
-    letter-spacing: 0%;
-
-    @include media(992.98, "max") {
-      font-size: 16px;
-    }
-    @include media(576.98, "max") {
-      font-size: 12px;
-    }
-  }
-
-  // .banner__slide-title
-  &__slide-title {
-    font-size: 20px;
-    line-height: 115%;
-    letter-spacing: 0%;
-    color: #324157;
-    white-space: nowrap;
-
-    @include media(1900.98, "max") {
-      white-space: wrap;
-
-      br {
-        display: none;
-      }
-    }
-
-    @include media(992.98, "max") {
-      font-size: 18px;
-    }
-    @include media(576.98, "max") {
-      font-size: 16px;
-    }
-  }
-
-  // .banner__slide-right
-  &__slide-right {
-    max-width: 250px;
-    width: 100%;
-    position: relative;
-
-    img {
-      width: 315px;
-      height: auto;
-      object-fit: cover;
-      position: absolute;
-      top: 50%;
-      right: -20px;
-      transform: translateY(-50%);
-    }
-
-    @include media(992.98, "max") {
-      max-width: 220px;
-    }
-    @include media(576.98, "max") {
-      max-width: 180px;
-    }
-  }
-
-  // .banner__swiper-nav
-  &__swiper-nav {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 810px;
-    width: 100%;
-    margin: 0 auto;
-    z-index: 100;
-
     @include media(768.98, "max") {
-      position: relative;
-      top: initial;
-      left: initial;
-      transform: initial;
-      max-width: 100%;
-      padding: 0 11px;
-      margin-top: 11px;
+      font-size: 20px;
     }
-  }
-
-  // .banner__swiper-button-next
-  &__swiper-button-next {
-    cursor: pointer;
-    position: relative;
-    width: 60px;
-    height: 60px;
-    box-shadow: 0px 5px 13.6px 0px rgba(0, 0, 0, 0.16);
-    border: 1px solid rgba(236, 236, 236, 1);
-    background: $white;
-    border-radius: 13px;
-    transition: opacity 0.3s;
 
     @include media(576.98, "max") {
-      width: 40px;
-      height: 40px;
-      border-radius: 8px;
-    }
-
-    &.swiper-button-disabled {
-      opacity: 0;
-      pointer-events: none;
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 60%;
-      width: 19px;
-      height: 29px;
-      transform: translate(-50%, -50%) rotate(180deg);
-      background-image: url("../assets/images/icons/arrow-slide.svg");
-      background-repeat: no-repeat;
-      background-size: contain;
-      @include media(576.98, "max") {
-        width: 13px;
-        height: 20px;
-      }
+      font-size: 16px;
     }
   }
-  // .banner__swiper-button-prev
-  &__swiper-button-prev {
-    cursor: pointer;
-    position: relative;
-    width: 60px;
-    height: 60px;
-    box-shadow: 0px 5px 13.6px 0px rgba(0, 0, 0, 0.16);
-    border: 1px solid rgba(236, 236, 236, 1);
-    background: $white;
-    border-radius: 13px;
-    transition: opacity 0.3s;
+  // .banner__link-icon
+  &__link-icon {
+    width: 25px;
+    height: 25px;
+    object-fit: contain;
+
     @include media(576.98, "max") {
-      width: 40px;
-      height: 40px;
-      border-radius: 8px;
-    }
-
-    &.swiper-button-disabled {
-      opacity: 0;
-      pointer-events: none;
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 40%;
-      width: 19px;
-      height: 29px;
-      transform: translate(-50%, -50%);
-      background-image: url("../assets/images/icons/arrow-slide.svg");
-      background-repeat: no-repeat;
-      background-size: contain;
-      @include media(576.98, "max") {
-        width: 13px;
-        height: 20px;
-      }
+      height: 15px;
+      width: 15px;
     }
   }
 }
