--- a/src/styles/blocks/feedback.scss
+++ b/src/styles/blocks/feedback.scss
@@ -225,7 +225,7 @@
       padding: 19px 20px;
       font-size: 18px;
       background: transparent;
-      border: 0.34px solid rgba(49, 72, 209, 1);
+      border: 0.5px solid rgba(49, 72, 209, 1);
       color: $title-color;
       width: 100%;
       margin-top: -5px;
@@ -288,6 +288,30 @@
       border-radius: 10px;
       padding: 19px 20px;
       height: 53px;
+    }
+  }
+
+  // .feedback__privacy
+  &__privacy {
+    @include graphik-medium;
+    font-size: 24px;
+    line-height: 127%;
+    color: $black;
+    text-align: center;
+    max-width: 623px;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 40px;
+
+    @include media(992.98, "max") {
+      font-size: 20px;
+    }
+
+    @include media(576.98, "max") {
+      margin-top: 20px;
+      @include graphik-regular;
+      font-size: 18px;
+      line-height: 28px;
     }
   }
 
