--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,14 +3,22 @@
 .header {
   width: 100%;
   height: auto;
-  position: fixed;
+  position: absolute;
   top: 38px;
   left: 0;
   z-index: 999;
+  height: 75px;
 
   @include media(992.98, "max") {
     background: $white;
     top: 0;
+    height: 45px;
+    position: relative;
+  }
+
+  // .header__container
+  &__container {
+    height: 100%;
   }
 
   // .header__wrapper
@@ -21,6 +29,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 100%;
 
     @include media(992.98, "max") {
       border-radius: 0;
@@ -89,11 +98,15 @@
     line-height: 100%;
     cursor: pointer;
 
+    @include media(1600.98, "max") {
+      font-size: 20px;
+    }
+
     @include media(1440.98, "max") {
       font-size: 18px;
     }
     @include media(1280.98, "max") {
-      font-size: 14px;
+      font-size: 16px;
     }
 
     @include media(992.98, "max") {
