--- a/src/styles/blocks/news-block.scss
+++ b/src/styles/blocks/news-block.scss
@@ -62,7 +62,25 @@
       padding: 10px 25px;
     }
 
-    &:hover {
+    @media (hover: hover) {
+      &:hover {
+        background: #3148d1;
+        .news__button-text {
+          color: $white;
+        }
+        .news__button-icon {
+          transform: translateX(5px);
+
+          svg {
+            path {
+              stroke: $white;
+            }
+          }
+        }
+      }
+    }
+
+    &:focus {
       background: #3148d1;
       .news__button-text {
         color: $white;
@@ -145,7 +163,6 @@
       height: 100%;
     }
 
-
     &:last-child {
       .news__link {
         @include media(1280.98, "max") {
@@ -179,20 +196,19 @@
 
   // .news__image
   &__image {
-    margin-bottom: 64px;
+    margin-bottom: 65px;
+    max-height: 375px;
 
     @include media(1440.98, "max") {
       margin-bottom: 40px;
     }
 
     @include media(1280.98, "max") {
-      margin-bottom: 0;
-      max-width: 400px;
-      width: 100%;
+      min-width: 400px;
     }
 
     @include media(768.98, "max") {
-      max-width: 100%;
+      min-width: initial;
     }
 
     @include media(576.98, "max") {
@@ -223,11 +239,8 @@
     line-height: 127%;
     color: $black;
     margin-bottom: 25px;
-    white-space: nowrap;
 
     @include media(1900.98, "max") {
-      white-space: wrap;
-
       br {
         display: none;
       }
