--- a/src/views/blocks/about-project.html
+++ b/src/views/blocks/about-project.html
@@ -6,21 +6,30 @@
         <img src="../../assets/images/about-project-decor-2.svg" alt="">
     </div>
     <div class="about-project__container container">
-        <h2 class="about-project__title">О проекте</h2>
+        <div class="about-project__headline">
+            <h2 class="about-project__title">О проекте</h2>
+            <div class="about-project__logo about-project__logo-mobile">
+                <img src="../../assets/images/logos/logo.svg" alt="">
+            </div>
+        </div>
         <div class="about-project__content">
             <div class="about-project__left">
                 <p class="about-project__description">Канатная дорога через Оку — новый, быстрый, комфортный и
                     экологичный способ передвижения между левым и правым берегом Нижнего Новгорода</p>
+                <div class="about-project__logo about-project__logo-desktop">
+                    <img src="../../assets/images/logos/logo.svg" alt="">
+                </div>
             </div>
             <div class="about-project__right">
-                <p class="about-project__text">Реализацией проекта второй канатной дороги в Нижнем Новгороде занимается
-                    Группа компаний «Урбантех». Это один из крупнейших российских операторов инфраструктурных проектов
-                    на транспорте. В портфеле Группы компаний — проекты в сфере транспортного планирования и
-                    моделирования, управления трафиком, обеспечения безопасности дорожного движения. </p>
-                <p class="about-project__text">Новая канатная дорога в Нижнем Новгороде объединит в себе лучшие мировые
-                    практики и технологии. <br />
-                    Проект реализуется по принципу государственно-частного партнерства на основе концессионного
-                    соглашения с Правительством Нижегородской области.</p>
+                <p class="about-project__text">Новая канатная дорога в Нижнем Новгороде соединит ст.м. «Заречная» на
+                    проспекте Ленина и парк «Швейцария» на проспекте Гагарина — жители смогут экономить в пути до 30
+                    минут в день. Проект объединяет лучшие мировые практики, каждая станция станет точкой притяжения для
+                    жителей — здесь будут расположены объекты коммерческого и социального назначения. </p>
+                <p class="about-project__text">Кабины движутся бесшумно и не требуют заправки топливом, что делают этот
+                    вид общественного транспорта самым экологичным.</p>
+                <p class="about-project__text">Проект реализуется на основе государственного контракта с Правительством
+                    Нижегородской области и ООО
+                    «Урбантех».</p>
             </div>
         </div>
     </div>
