--- a/src/views/blocks/banner.html
+++ b/src/views/blocks/banner.html
@@ -1,185 +1,19 @@
 <section class="banner" id="banner">
     <div class="banner__background">
-        <img src="../../assets/images/banner.jpg" alt="">
+        <img class="banner__background-desktop" src="../../assets/images/banner.jpg" alt="">
+        <img class="banner__background-mobile" src="../../assets/images/banner-mob.jpg" alt="">
+
     </div>
     <div class="banner__headline">
-        <h1 class="banner__title"> Канатная дорога через р. Оку </h1>
+        <div class="banner__title">
+            <span class="banner__title-text"> 5 минут над Окой</span>
+            <span class="banner__title-line"></span>
+            <span class="banner__title-text">соединяем Нижний</span>
+        </div>
         <span class="banner__subtitle">Строительство идет!</span>
-    </div>
-    <div class="banner__slider">
-        <div class="banner__slider-title">
-            <span>Основные этапы </span>
-        </div>
-        <div class="swiper banner__swiper">
-            <div class="swiper-wrapper banner__swiper-wrapper">
-                <div class="swiper-slide banner__swiper-slide">
-                    <div class="banner__slide-wrapper">
-                        <div class="banner__slide-stage banner__slide-stage-completed">
-                            <div class="banner__slide-left">
-                                <div class="banner__slide-subtitle">
-                                    <img src="../../assets/images/icons/checkmark.png" alt="">
-                                    <span class="banner__slide-subtitle-text">Выполнено</span>
-                                </div>
-                                <span class="banner__slide-title">Подготовка территории <br /> строительства</span>
-                            </div>
-                            <div class="banner__slide-right">
-                                <img src="../../assets/images/slider-1.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide banner__swiper-slide">
-                    <div class="banner__slide-wrapper">
-                        <div class="banner__slide-stage banner__slide-stage-completed">
-                            <div class="banner__slide-left">
-                                <div class="banner__slide-subtitle">
-                                    <img src="../../assets/images/icons/checkmark.png" alt="">
-                                    <span class="banner__slide-subtitle-text">Выполнено</span>
-                                </div>
-                                <span class="banner__slide-title">Рытье котлованов <br /> и подготовка
-                                    фундаментов</span>
-                            </div>
-                            <div class="banner__slide-right">
-                                <img src="../../assets/images/slider-1.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide banner__swiper-slide">
-                    <div class="banner__slide-wrapper">
-                        <div class="banner__slide-stage banner__slide-stage-completed">
-                            <div class="banner__slide-left">
-                                <div class="banner__slide-subtitle">
-                                    <img src="../../assets/images/icons/checkmark.png" alt="">
-                                    <span class="banner__slide-subtitle-text">Выполнено</span>
-                                </div>
-                                <span class="banner__slide-title">Строительство <br /> станции «Заречная»</span>
-                            </div>
-                            <div class="banner__slide-right">
-                                <img src="../../assets/images/slider-1.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide banner__swiper-slide">
-                    <div class="banner__slide-wrapper">
-                        <div class="banner__slide-stage banner__slide-stage-completed">
-                            <div class="banner__slide-left">
-                                <div class="banner__slide-subtitle">
-                                    <img src="../../assets/images/icons/checkmark.png" alt="">
-                                    <span class="banner__slide-subtitle-text">Выполнено</span>
-                                </div>
-                                <span class="banner__slide-title">Строительство станции <br /> «Проспект
-                                    Гагарина»</span>
-                            </div>
-                            <div class="banner__slide-right">
-                                <img src="../../assets/images/slider-1.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide banner__swiper-slide">
-                    <div class="banner__slide-wrapper">
-                        <div class="banner__slide-stage banner__slide-stage-ongoing">
-                            <div class="banner__slide-left">
-                                <div class="banner__slide-subtitle">
-                                    <span class="banner__slide-subtitle-circle"></span>
-                                    <span class="banner__slide-subtitle-text">Идет работа</span>
-                                </div>
-                                <span class="banner__slide-title">Строительство <br /> станции «Тихая Гавань»</span>
-                            </div>
-                            <div class="banner__slide-right">
-                                <img src="../../assets/images/slider-1.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide banner__swiper-slide">
-                    <div class="banner__slide-wrapper">
-                        <div class="banner__slide-stage banner__slide-stage-await">
-                            <div class="banner__slide-left">
-                                <div class="banner__slide-subtitle">
-                                    <img src="../../assets/images/icons/stopwatch.png" alt="">
-                                    <span class="banner__slide-subtitle-text">Предстоит</span>
-                                </div>
-                                <span class="banner__slide-title">Монтаж опор</span>
-                            </div>
-                            <div class="banner__slide-right">
-                                <img src="../../assets/images/slider-1.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide banner__swiper-slide">
-                    <div class="banner__slide-wrapper">
-                        <div class="banner__slide-stage banner__slide-stage-await">
-                            <div class="banner__slide-left">
-                                <div class="banner__slide-subtitle">
-                                    <img src="../../assets/images/icons/stopwatch.png" alt="">
-                                    <span class="banner__slide-subtitle-text">Предстоит</span>
-                                </div>
-                                <span class="banner__slide-title">Монтаж канатов <br /> и технологического <br />
-                                    оборудования</span>
-                            </div>
-                            <div class="banner__slide-right">
-                                <img src="../../assets/images/slider-1.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide banner__swiper-slide">
-                    <div class="banner__slide-wrapper">
-                        <div class="banner__slide-stage banner__slide-stage-await">
-                            <div class="banner__slide-left">
-                                <div class="banner__slide-subtitle">
-                                    <img src="../../assets/images/icons/stopwatch.png" alt="">
-                                    <span class="banner__slide-subtitle-text">Предстоит</span>
-                                </div>
-                                <span class="banner__slide-title">Отделочные работы</span>
-                            </div>
-                            <div class="banner__slide-right">
-                                <img src="../../assets/images/slider-1.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide banner__swiper-slide">
-                    <div class="banner__slide-wrapper">
-                        <div class="banner__slide-stage banner__slide-stage-await">
-                            <div class="banner__slide-left">
-                                <div class="banner__slide-subtitle">
-                                    <img src="../../assets/images/icons/stopwatch.png" alt="">
-                                    <span class="banner__slide-subtitle-text">Предстоит</span>
-                                </div>
-                                <span class="banner__slide-title">Тестирование <br /> и проверка безопасности</span>
-                            </div>
-                            <div class="banner__slide-right">
-                                <img src="../../assets/images/slider-1.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide banner__swiper-slide">
-                    <div class="banner__slide-wrapper">
-                        <div class="banner__slide-stage banner__slide-stage-await">
-                            <div class="banner__slide-left">
-                                <div class="banner__slide-subtitle">
-                                    <img src="../../assets/images/icons/stopwatch.png" alt="">
-                                    <span class="banner__slide-subtitle-text">Предстоит</span>
-                                </div>
-                                <span class="banner__slide-title">Запуск в эксплуатацию</span>
-                            </div>
-                            <div class="banner__slide-right">
-                                <img src="../../assets/images/slider-1.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="banner__swiper-nav">
-                <div class="banner__swiper-button-prev"></div>
-                <div class="banner__swiper-button-next"></div>
-            </div>
-        </div>
+        <a class="banner__link" href="#main-events">
+            <span class="banner__link-text">Основные этапы </span>
+            <img class="banner__link-icon" src="../../assets/images/icons/arrow-down.svg" alt="">
+        </a>
     </div>
 </section>
