--- a/src/styles/blocks/about-project.scss
+++ b/src/styles/blocks/about-project.scss
@@ -81,6 +81,7 @@
     max-width: 423px;
     height: auto;
     width: 100%;
+    display: none;
 
     @include media(992.98, "max") {
       width: auto;
@@ -95,7 +96,7 @@
     }
 
     &-desktop {
-      display: block;
+      display: none;
       @include media(992.98, "max") {
         display: none;
       }
@@ -104,7 +105,7 @@
     &-mobile {
       display: none;
       @include media(992.98, "max") {
-        display: block;
+        display: none;
       }
     }
   }
@@ -115,6 +116,10 @@
     font-size: 48px;
     line-height: 100%;
     color: $title-color;
+
+    @include media(1280.98, "max") {
+      font-size: 38px;
+    }
 
     @include media(992.98, "max") {
       font-size: 32px;
@@ -164,7 +169,7 @@
     line-height: 54px;
     color: $black;
 
-    @include media(992.98, "max") {
+    @include media(1280.98, "max") {
       font-size: 30px;
       line-height: 130%;
     }
@@ -191,7 +196,7 @@
     letter-spacing: 0%;
     margin-bottom: 66px;
 
-    @include media(992.98, "max") {
+    @include media(1280.98, "max") {
       font-size: 20px;
       line-height: 28px;
       margin-bottom: 24px;
