--- a/src/styles/blocks/banner.scss
+++ b/src/styles/blocks/banner.scss
@@ -78,7 +78,11 @@
     margin: 0 auto;
     position: relative;
     z-index: 1;
-    margin-bottom: 55px;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 32px;
 
     @include media(1900.98, "max") {
       max-width: 100%;
@@ -86,42 +90,24 @@
     }
 
     @include media(1280.98, "max") {
-      margin-bottom: 30px;
+      margin-bottom: 20px;
+      gap: 4px 18px;
     }
 
     @include media(992.98, "max") {
       padding: 0 25px;
     }
 
-    @include media(576.98, "max") {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      padding: 0 12px;
-      padding-bottom: 36px;
-      margin-bottom: 0;
-    }
-  }
-
-  // .banner__title
-  &__title {
-    margin-bottom: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 32px;
-
-    @include media(1280.98, "max") {
-      gap: 4px 0;
-    }
-
     @include media(768.98, "max") {
-      margin-bottom: 24px;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
     }
 
     @include media(576.98, "max") {
+      padding: 0 12px;
+      padding-bottom: 25px;
+      margin-bottom: 0;
+      gap: 4px 10px;
     }
   }
 
@@ -159,100 +145,6 @@
     @include media(768.98, "max") {
       margin-left: -20px;
       width: calc(100% + 20px);
-    }
-  }
-
-  // .banner__subtitle
-  &__subtitle {
-    display: block;
-    font-size: 42px;
-    line-height: 100%;
-    color: $white;
-    text-align: left;
-    width: 100%;
-    margin-bottom: 40px;
-
-    @include media(1280.98, "max") {
-      font-size: 24px;
-      margin-bottom: 30px;
-    }
-
-    @include media(576.98, "max") {
-      margin-bottom: 28px;
-    }
-  }
-
-  // .banner__link
-  &__link {
-    max-width: 440px;
-    width: 100%;
-    height: 80px;
-    padding: 24px 38px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 70px;
-    background: linear-gradient(
-      90deg,
-      rgba(255, 255, 255, 0.44) 0%,
-      rgba(255, 255, 255, 0.36) 100%
-    );
-    backdrop-filter: blur(25px);
-    border-radius: 16px;
-    cursor: pointer;
-    scale: 1;
-    transition: all 0.3s ease-in-out;
-
-    @include media(1280.98, "max") {
-      height: 60px;
-      padding: 14px 30px;
-      max-width: 360px;
-      gap: 2rem;
-    }
-
-    @include media(768.98, "max") {
-      gap: 0;
-      max-width: 300px;
-    }
-
-    @include media(576.98, "max") {
-      max-width: 250px;
-      padding: 15px 30px;
-      height: 50px;
-    }
-
-    &:hover {
-      scale: 1.02;
-    }
-  }
-
-  // .banner__link-text
-  &__link-text {
-    @include graphik-medium;
-    font-size: 32px;
-    line-height: 100%;
-    color: #ffffff;
-
-    @include media(1280.98, "max") {
-      font-size: 26px;
-    }
-    @include media(768.98, "max") {
-      font-size: 20px;
-    }
-
-    @include media(576.98, "max") {
-      font-size: 16px;
-    }
-  }
-  // .banner__link-icon
-  &__link-icon {
-    width: 25px;
-    height: 25px;
-    object-fit: contain;
-
-    @include media(576.98, "max") {
-      height: 15px;
-      width: 15px;
     }
   }
 }
