--- a/src/styles/blocks/feedback.scss
+++ b/src/styles/blocks/feedback.scss
@@ -50,6 +50,10 @@
     margin-bottom: 28px;
     text-align: center;
 
+    @include media(1280.98, "max") {
+      font-size: 38px;
+    }
+
     @include media(992.98, "max") {
       font-size: 32px;
       margin-bottom: 28px;
@@ -67,6 +71,11 @@
     letter-spacing: 0%;
     text-align: center;
     margin-bottom: 36px;
+
+    @include media(1280.98, "max") {
+      font-size: 20px;
+      line-height: 30px;
+    }
 
     @include media(992.98, "max") {
       font-size: 18px;
@@ -113,7 +122,7 @@
     align-items: center;
     border: 1px solid transparent;
 
-    @include media(992.98, "max") {
+    @include media(1280.98, "max") {
       font-size: 20px;
     }
 
@@ -168,7 +177,7 @@
       transition: background-color 5000s ease-in-out 0s;
     }
 
-    @include media(992.98, "max") {
+    @include media(1280.98, "max") {
       height: 155px;
     }
   }
@@ -276,10 +285,10 @@
     border-radius: 8px;
     margin-top: 110px;
 
-    @include media(992.98, "max") {
+    @include media(1280.98, "max") {
       font-size: 24px;
       padding: 20px;
-      margin-top: 80px;
+      margin-top: 40px;
     }
 
     @include media(576.98, "max") {
@@ -303,7 +312,7 @@
     margin: 0 auto;
     margin-top: 40px;
 
-    @include media(992.98, "max") {
+    @include media(1280.98, "max") {
       font-size: 20px;
     }
 
