--- a/src/views/blocks/map.html
+++ b/src/views/blocks/map.html
@@ -3,7 +3,7 @@
         <div class="map__draggable">
             <div class="map__media">
                 <div class="map__dots map__dots-desk">
-                    <div class="map__dot" data-top="4.17" data-right="8.33">
+                    <div class="map__dot map__dot--active" data-top="4.17" data-right="8.33">
                         <div class="map__dot-title">«Проспект Гагарина»</div>
                         <div class="map__dot-content map__dot-content-desktop">
                             <div class="map__dot-tags">
@@ -11,6 +11,7 @@
                                     <div class="map__dot-tag-name">
                                         ТРЦ «Океанис»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
                                     <div class="map__dot-tag-time">
                                         5 минут
                                     </div>
@@ -19,6 +20,8 @@
                                     <div class="map__dot-tag-name">
                                         Парк «Швейцария»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
+
                                     <div class="map__dot-tag-time">
                                         5 минут
                                     </div>
@@ -27,6 +30,8 @@
                                     <div class="map__dot-tag-name">
                                         НИУ РАНХиГС
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
+
                                     <div class="map__dot-tag-time">
                                         10 минут
                                     </div>
@@ -35,6 +40,8 @@
                                     <div class="map__dot-tag-name">
                                         Дворец спорта «Нагорный»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
+
                                     <div class="map__dot-tag-time">
                                         10 минут
                                     </div>
@@ -43,6 +50,8 @@
                                     <div class="map__dot-tag-name">
                                         ПИМУ, корпус № 2
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
+
                                     <div class="map__dot-tag-time">
                                         2 минут
                                     </div>
@@ -61,6 +70,7 @@
                                     <div class="map__dot-tag-name">
                                         Яхт-клуб «Тихая гавань»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
                                     <div class="map__dot-tag-time">
                                         5 минут
                                     </div>
@@ -69,6 +79,7 @@
                                     <div class="map__dot-tag-name">
                                         ЖК «КМ Ривер Парк»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
                                     <div class="map__dot-tag-time">
                                         10 минут
                                     </div>
@@ -88,6 +99,7 @@
                                     <div class="map__dot-tag-name">
                                         ТЦ «Муравей»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
                                     <div class="map__dot-tag-time">
                                         5 минут
                                     </div>
@@ -105,6 +117,7 @@
                                     <div class="map__dot-tag-name">
                                         Гостиница «Заречье»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
                                     <div class="map__dot-tag-time">
                                         5 минут
                                     </div>
@@ -113,6 +126,7 @@
                                     <div class="map__dot-tag-name">
                                         Дворец спорта «Заречье»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
                                     <div class="map__dot-tag-time">
                                         5 минут
                                     </div>
@@ -134,6 +148,7 @@
                                     <div class="map__dot-tag-name">
                                         ТРЦ «Океанис»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
                                     <div class="map__dot-tag-time">
                                         5 минут
                                     </div>
@@ -142,6 +157,7 @@
                                     <div class="map__dot-tag-name">
                                         Парк «Швейцария»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
                                     <div class="map__dot-tag-time">
                                         5 минут
                                     </div>
@@ -150,6 +166,7 @@
                                     <div class="map__dot-tag-name">
                                         НИУ РАНХиГС
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
                                     <div class="map__dot-tag-time">
                                         10 минут
                                     </div>
@@ -158,6 +175,8 @@
                                     <div class="map__dot-tag-name">
                                         Дворец спорта «Нагорный»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
+
                                     <div class="map__dot-tag-time">
                                         10 минут
                                     </div>
@@ -166,6 +185,8 @@
                                     <div class="map__dot-tag-name">
                                         ПИМУ, корпус № 2
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
+
                                     <div class="map__dot-tag-time">
                                         2 минут
                                     </div>
@@ -192,6 +213,8 @@
                                     <div class="map__dot-tag-name">
                                         Яхт-клуб «Тихая гавань»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
+
                                     <div class="map__dot-tag-time">
                                         5 минут
                                     </div>
@@ -200,6 +223,8 @@
                                     <div class="map__dot-tag-name">
                                         ЖК «КМ Ривер Парк»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
+
                                     <div class="map__dot-tag-time">
                                         10 минут
                                     </div>
@@ -236,6 +261,8 @@
                                     <div class="map__dot-tag-name">
                                         ТЦ «Муравей»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
+
                                     <div class="map__dot-tag-time">
                                         5 минут
                                     </div>
@@ -244,6 +271,8 @@
                                     <div class="map__dot-tag-name">
                                         Гостиница «Заречье»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
+
                                     <div class="map__dot-tag-time">
                                         5 минут
                                     </div>
@@ -252,6 +281,8 @@
                                     <div class="map__dot-tag-name">
                                         Дворец спорта «Заречье»
                                     </div>
+                                    <img src="https://kdoka.ru/wp-content/uploads/2025/07/Walking-1.png" alt="">
+                                    
                                     <div class="map__dot-tag-time">
                                         5 минут
                                     </div>
